# mcp_demo

./: .gitignore  AGENT.md  AGENT_README.md  ARCHITECTURE.md  LICENSE  QUICKSTART.md  README.md  TESTING.md  example.py  main.py  pyproject.toml  test_adapters.py
client/: agent.py  mcp_client.py
server/: config.py  mcp_adapters.py  server.py
server/tools/: events_tool.py  weather_tool.py
src/: mcp_adapters.py  server.py
src/tools/: events_tool.py  weather_tool.py
tests/: test_integration.py
tests/client/: test_mcp_client.py
tests/server/: test_adapters.py  test_events_tool.py  test_server_endpoints.py  test_weather_tool_edge_cases.py
