[project]
name = "mcp-tools-server"
version = "0.1.0"
description = "An MCP server providing weather and events search tools using FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.6.1",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=0.2.0",
    "mcp>=1.19.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
]

[tool.ruff]
# Target Python 3.13
target-version = "py313"

# Line length matching Black's default
line-length = 88

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# Ignore specific rules if needed
lint.ignore = []

# Exclude specific directories
exclude = [
    ".venv",
    "__pycache__",
    ".git",
]

[tool.ruff.lint.isort]
known-first-party = ["server", "client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
